--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    min-height: 100vh;
+    height: 100vh;
     flex-direction: column;
     background-color: pink;
     margin: 0;
