--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     align-items: center;
     justify-content: center;
     display: flex;
-    margin: 150px;
+    flex-direction: column;
     gap: 50px;
 }
 
@@ -72,10 +72,10 @@ body {
 }
 
 .isinela {
-    font-size: 25px;
+    font-size: 11px;
     font-weight: 900;
     text-align: center;
-    max-width: 1000px;
+    max-width: 200px;
     margin: auto;
     padding: 10px;
     color: aliceblue;
@@ -83,7 +83,6 @@ body {
     margin-bottom: 28px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color:palevioletred;
-    border-radius: 70px;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
