--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
 }
 
 .footer {
+    color: aliceblue;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     display: flex;
